<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="95dp"
            android:drawableStart="@drawable/newlogo"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLetsRegister"
            style="@style/h4"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            android:text="@string/let_s_register"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/edFirstNameRegister"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints="First Name"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/tvLetsRegister"
            style="@style/editText"
            android:textColor="@color/g_gray500"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/edLastNameRegister"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints="Email"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister"
            style="@style/editText"
            android:textColor="@color/g_gray500"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/edEmailRegister"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints="Email"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/edLastNameRegister"
            style="@style/editText"
            android:textColor="@color/g_gray500"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/edPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextheight"
            android:autofillHints="Password"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/edEmailRegister"
            style="@style/editText"
            android:hint="@string/password"
            android:textColor="@color/g_gray500"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            />

        <TextView
            android:id="@+id/tvAlreadyLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/g_black"
            android:text="@string/already_have_an_account_register"
            android:layout_marginTop="15dp"
            />

        <io.writeopia.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvAlreadyLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            android:text="@string/register"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>