<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="95dp"
            android:drawableStart="@drawable/newlogo"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLetslogin"
            style="@style/h4"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"/>
        
        <EditText
            android:id="@+id/edEmailLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextheight"
            android:autofillHints="Email"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvLetslogin"
            style="@style/editText"
            android:textColor="@color/g_gray500"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="50dp"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/edPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextheight"
            android:autofillHints="Password"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/edEmailLogin"
            style="@style/editText"
            android:hint="@string/password"
            android:textColor="@color/g_gray500"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:textSize="19sp"
            />

        <TextView
            android:id="@+id/tvRegisterplease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/edPasswordLogin"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/g_black"
            android:text="@string/pleaseRegister"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterplease"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            />

        <io.writeopia.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:text="@string/login"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:spinning_bar_color="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>